<resources>
    <string name="app_name">Twitter Alonso</string>
    <string name="btRegistrarse">Registrarse</string>
    <string name="btIniciarSesion">Iniciar Sesion</string>
    <string name="tvBienvenidos">Bienvenidos</string>
    <string name="tvCorreoIS">Correo: </string>
    <string name="tvContraIS">Contraseña: </string>
    <string name="title_activity_time_line">Twitter Alonso</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Buscar</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="navMensajes">Mensajes</string>
    <string name="tvBuscar">Buscar Amigo</string>
    <string name="btBuscar">Buscar Usuario</string>
    <string name="tvTituloIniSesh">Iniciar Sesion</string>
    <string name="tvTweet">Escribir Tweet</string>
    <string name="btTwittear">Twittear</string>
    <string name="toastRegAct">Se registro satisfactoriamente</string>
    <string name="toastNoNull">No se permiten valores vacios</string>
    <string name="toastRegActEmail">Formato de correo invalido</string>
    <string name="toastNoCoincide">No coincide los datos</string>
    <string name="toastNoHayRegistros">No hay registros de este usuario</string>
    <string name="toastAgregaSeguidor">Ahora sigues este perfil</string>
    <string name="nuevoTuitDe">Nuevo tuit de: %s</string>
    <string name="tvMandarMTit">Mandar Mensaje</string>
    <string name="btEnviarMensj">Enviar</string>
    <string name="toastRegistroMensaje">Su mensaje se ha enviado</string>
    <string name="miConfig">Configuración</string>
    <string name="tvCambCorreo">Cambiar Correo: </string>
    <string name="tvCambPwd">Cambiar Contraseña: </string>
    <string name="btCambCorreo">Guardar Correo</string>
    <string name="btCambPwd">Guardar Contraseña</string>
    <string name="btCambImagen">Cambiar Imagen de Perfil</string>
    <string name="toastUsuarioExiste">Ya existe un usuario con este correo</string>
    <string name="toastNoSePudo">No se pudo realizar la operación</string>
    <string name="btCerrarSesion">Cerrar Sesión</string>
    <string name="toastYaLoSeguis">Ya estas siguiendo a esta persona</string>
    <string name="toastEliminaAmigo">Has dejado de seguirlo</string>
    <string name="toastEliminaNoAmigo">No se puede dejar de seguir a alguien que no seguis</string>
    <string name="tvNotif">Notificaciones</string>
    <string name="tvNombreBusc">Nombre de usuario</string>
    <string name="tvTuitTitle">Tweet:</string>
    <string name="tvDest">Destinatario</string>
    <string name="tvMensajetv">Mensaje</string>
</resources>
