<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navBuscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navNotif"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navMensajes"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/navMensajes" />
    <item
        android:id="@+id/miConfig"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/miConfig" />

</menu>
